--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^6.1.0",
     "eslint-plugin-nuxt": ">=0.4.2",
+    "firebase": "^6.3.4",
     "husky": "^2.6.0",
     "lint-staged": "^8.2.1"
   }
