--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-nuxt": ">=0.4.2",
     "firebase": "^6.3.4",
     "husky": "^2.6.0",
-    "lint-staged": "^8.2.1"
+    "lint-staged": "^8.2.1",
+    "push-dir": "^0.4.1"
   }
 }
